# NumPyxel

./: .gitignore  README.md  setup.cfg  tox.ini
example/: virtual_matrix_demo.py
src/fastled/: __init__.py  crgb.py  pixel_map.py
src/fastled/mock/: __init__.py  display.py  led.py
tests/: test_pixel_map.py  test_spacing.py
