[metadata]
name = numpyxel
version = 0.0.1
description = A python-based proof of concept for LED matrix manipulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Wordsworth
author_email = 42462000+cmw278@users.noreply.github.com

keywords = sample, setuptools, development, led

## Optional
# licence_files = LICENSE

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Topic :: Software Development :: Prototyping
  Programming Language :: Python :: 3

[options]
package_dir =
  = src

packages = find:

install_requires =
  numpy
  opencv-contrib-python

[options.extras_require]
tests =
  parameterized
  pycodestyle
  pytest
tox =
  tox

[options.packages.find]
where = src
